FullQa New/src/objects/Badge__c.object
<CustomObject>
    <fields>
        <fullName>Date_Achieved__c</fullName>
        <label>Date Achieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Matrix_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Functional Matrix Ext Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Functional_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Matrix</label>
        <referenceTo>Functional_Matrix__c</referenceTo>
        <relationshipLabel>Badges</relationshipLabel>
        <relationshipName>Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>CASE(Type__c, 
&quot;Sales Tax&quot;, 1,
&quot;Refunds&quot;, 2,
&quot;Address Validation&quot;, 3,
&quot;VAT&quot;, 4,
&quot;Customs Duty &amp; Import Tax&quot;, 5,
&quot;GST&quot;, 6,
&quot;Brazil&quot;, 7,
&quot;POS&quot;, 8,
&quot;MultiTax&quot;, 9,
&quot;Extractor&quot;, 10,
&quot;Document Management&quot;, 11,
&quot;Communication&quot;, 12,
&quot;Lodging&quot;, 13,
&quot;Excise&quot;, 14,
&quot;Provisioning&quot;,15,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Tax</fullName>
                </value>
                <value>
                    <fullName>Refunds</fullName>
                </value>
                <value>
                    <fullName>VAT</fullName>
                </value>
                <value>
                    <fullName>Duties &amp; Tarrifs</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>MultiTax</fullName>
                </value>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Address Validation</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Use Tax</fullName>
                </value>
                <value>
                    <fullName>Document Management</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>Sales Tax - AvaTax</fullName>
                </value>
                <value>
                    <fullName>Customs Duty &amp; Import Tax</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>Sales Tax - TrustFile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <referenceTo>Version__c</referenceTo>
        <relationshipLabel>Badges</relationshipLabel>
        <relationshipName>Badges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Badge</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Badge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>